<resources>
    <string name="app_name">ToroVash</string>
    <string name="vash">Vash</string>
    <string name="toro">Toro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solo_mode">Solo Mode</string>
    <string name="play_with_your_friend">Play With Your Friend</string>
    <string name="choose_your_number">choose your number</string>
    <string name="restart">restart</string>
    <string name="recent_try">Recent Try</string>
    <string name="recent_guess">Recent guess</string>
    <string name="t">T</string>
    <string name="v">V</string>
    <string name="confirm">confirm</string>
    <string name="choose_a_complex_game_code">Choose a complex game code</string>
    <string name="choose_a_number_for_your_opponent">choose a number for your opponent</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="enter">Enter</string>
    <string name="info">info</string>
    <string name="rules">rules</string>
</resources>